--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,10 @@
 DATABASE_URL=postgres://root:root@postgres:5432/main
 APP_PORT=5000
+
+DB_USER=root
+DB_PASS=root
+DB_NAME=main
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASS=password
