feat: implement basic functionality & add swagger

--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,6 @@ DB_NAME=main
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASS=password
+
+JWT_SECRET=this_need_to_be_long_and_random_to_be_secure
+JWT_EXPIRATION_IN_MINUTES=60
